--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "citypicker",
+  "name": "city-picker",
   "description": "A simple jQuery plugin for picking provinces, cities and districts of China.",
   "version": "1.2.0",
   "main": "dist/city-picker.js",
@@ -32,17 +32,6 @@
     "front-end",
     "web",
     "development"
-  ],
-  "dependencies": {
-    "jquery": ">= 1.9.1"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^1.12.0",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.5.1"
-  }
+  ]
+
 }
